Bug 951150 - Sync notification system message with Notification API. r=mhenretty